# splice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh
.github/workflows/: release.yml
deploy/: splice.service
docs/: DEPLOY.md  DESIGN.md  PIPES.md
native/: Cargo.toml  build.rs  cbindgen.toml
native/src/: lib.rs
src/: main.cpp
src/common/: base64.h  bytes.h  config.cpp  config.h  log.h  time.h
src/crypto/: aead.cpp  aead.h  spake2.cpp  spake2.h
src/lwip_port/: lwipopts.h  sys_port.c
src/lwip_port/arch/: cc.h
src/native/: native.h
src/net/: endpoint.cpp  endpoint.h  poller.cpp  poller.h  socket.cpp  socket.h  tls.cpp  tls.h
src/peer/: chat.cpp  chat.h  daemon.cpp  daemon.h  daemon_client.cpp  daemon_client.h  datatest.cpp  datatest.h  nc.cpp  nc.h  netstack.cpp  netstack.h  pairing.cpp  pairing.h  pathman.cpp  pathman.h  pathwatch.cpp  pathwatch.h  peer_cmd.cpp  peer_cmd.h  pipes.cpp  pipes.h  runtime.cpp  runtime.h  serve_get.cpp  serve_get.h  store.cpp  store.h  wg.cpp  wg.h  xfer.cpp  xfer.h
src/proto/: frame.cpp  frame.h  pairing.cpp  pairing.h  relay.cpp  relay.h
src/server/: code_alloc.cpp  code_alloc.h  pairing_server.cpp  pairing_server.h  rate_limit.cpp  rate_limit.h  relay_server.cpp  relay_server.h  relay_table.cpp  relay_table.h  server_main.cpp  server_main.h
tests/: chat_it.py  daemon_it.py  data_it.py  file_it.py  itlib.py  nc_it.py  pair_it.py  serve_get_it.py  server_it.py  setup_it.py  smoke_server.py  stress_it.py  test_aead.cpp  test_bytes.cpp  test_code_alloc.cpp  test_config.cpp  test_endpoint.cpp  test_frame.cpp  test_netstack.cpp  test_pairing.cpp  test_rate_limit.cpp  test_relay.cpp  test_relay_table.cpp  test_spake2.cpp  test_wg.cpp
