[package]
name = "spl-native"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "C ABI shim over boringtun (WireGuard) and spake2 (PAKE) for splice"

[lib]
name = "spl_native"
# staticlib: linked directly into the C++ `spl` binary via Corrosion.
crate-type = ["staticlib"]

[dependencies]
# WireGuard (Phase 4) and SPAKE2 (Phase 3) live here so the security-critical
# primitives share one vetted Rust build. Declared now — ahead of use — to verify
# they compile on this aarch64 host early (risk front-loading per the plan).
# 0.7.x uses stable dalek (x25519-dalek 2.0.1 / curve25519-dalek 4.1), which is
# compatible with spake2's curve25519-dalek ^4. 0.6.0 pinned RC dalek and conflicts.
boringtun = "0.7"
spake2 = "0.4"
# 2.0.1 matches boringtun's pin; static_secrets gives us StaticSecret for keygen.
x25519-dalek = { version = "2", features = ["static_secrets"] }
getrandom = "0.2"

[build-dependencies]
cbindgen = "0.27"

[profile.release]
# Keep symbols reasonable; this is linked into our own binary.
opt-level = 2
